<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tips2"
        android:id="@+id/textView3"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="#29B6F6"
        android:textAlignment="center"

        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/imageView2"
        android:src="@drawable/img2"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tips3"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:textColor="#29B6F6"
        android:textAlignment="center"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/imageView3"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img3"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anterior"
            android:id="@+id/button2"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="20dp"
            android:onClick="pagina1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:id="@+id/button3"
            android:layout_marginLeft="40dp"
            android:onClick="pagina3" />
    </LinearLayout>

</LinearLayout>