<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tips4"
        android:id="@+id/textView5"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:textColor="#29B6F6"
        android:textAlignment="center"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/imageView4"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img4"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tips6"
        android:id="@+id/textView6"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:textColor="#29B6F6"
        android:textAlignment="center"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/imageView5"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img5"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anterior"
        android:id="@+id/button4"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:onClick="pagina2" />
</LinearLayout>